dashy/dashy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: dashy
