dashy/dashy-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  parentRefs:
    - name: dashy
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - dashy.raft.lutris.house
  rules:
    - backendRefs:
        - name: dashy
          port: 8080
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
